This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: thread_pthread.h fixes for AIX
Type: compile error Stage: resolved
Components: Build Versions: Python 3.3, Python 3.4, Python 2.7
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: David.Edelsohn, pitrou, python-dev
Priority: normal Keywords:

Created on 2013-06-18 13:58 by David.Edelsohn, last changed 2022-04-11 14:57 by admin. This issue is now closed.

Messages (3)
msg191410 - (view) Author: David Edelsohn (David.Edelsohn) * Date: 2013-06-18 13:58
Recent releases of AIX do not need to call pthread_init(). The function is provided in libpthread.a for backward compatibility, but not declared in any header. This patch adds a declaration, or it can be removed completely because AIX 4.x no longer is supported.

The patch also adds uses of "error" to two functions to silence warnings, in a similar manner to other functions in the file.

diff -r f6f70f1ab124 Python/thread_pthread.h
--- a/Python/thread_pthread.h   Mon Jun 17 22:02:14 2013 +0200
+++ b/Python/thread_pthread.h   Tue Jun 18 11:54:50 2013 -0700
@@ -170,6 +170,7 @@
 PyThread__init_thread(void)
 {
 #if defined(_AIX) && defined(__GNUC__)
+    extern void pthread_init(void);
     pthread_init();
 #endif
 }
@@ -444,6 +445,7 @@
     pthread_lock *thelock = (pthread_lock *)lock;
     int status, error = 0;
 
+    (void) error; /* silence unused-but-set-variable warning */
     dprintf(("PyThread_free_lock(%p) called\n", lock));
 
     /* some pthread-like implementations tie the mutex to the cond
@@ -530,6 +532,7 @@
     pthread_lock *thelock = (pthread_lock *)lock;
     int status, error = 0;
 
+    (void) error; /* silence unused-but-set-variable warning */
     dprintf(("PyThread_release_lock(%p) called\n", lock));
 
     status = pthread_mutex_lock( &thelock->mut );
msg191430 - (view) Author: Roundup Robot (python-dev) (Python triager) Date: 2013-06-18 20:21
New changeset f2e373ddfa00 by Antoine Pitrou in branch '3.3':
Issue #18256: Compilation fix for recent AIX releases.  Patch by David Edelsohn.
http://hg.python.org/cpython/rev/f2e373ddfa00

New changeset 7081859c1e20 by Antoine Pitrou in branch 'default':
Issue #18256: Compilation fix for recent AIX releases.  Patch by David Edelsohn.
http://hg.python.org/cpython/rev/7081859c1e20

New changeset a5ef439f3c9e by Antoine Pitrou in branch '2.7':
Issue #18256: Compilation fix for recent AIX releases.  Patch by David Edelsohn.
http://hg.python.org/cpython/rev/a5ef439f3c9e
msg191431 - (view) Author: Antoine Pitrou (pitrou) * (Python committer) Date: 2013-06-18 20:23
Fixed, thank you!
History
Date User Action Args
2022-04-11 14:57:47adminsetgithub: 62456
2013-06-18 20:23:39pitrousetstatus: open -> closed

versions: + Python 2.7, - Python 3.5
nosy: + pitrou

messages: + msg191431
resolution: fixed
stage: resolved
2013-06-18 20:21:45python-devsetnosy: + python-dev
messages: + msg191430
2013-06-18 13:58:41David.Edelsohncreate