Issue #18256: Compilation fix for recent AIX releases.  Patch by David Edelsohn.